all of the projcet

--- a/app/Popover.html
+++ b/app/Popover.html
@@ -84,8 +84,7 @@
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({app,.tmp}) scripts/main.js -->
-<script src="scripts/main.js"></script>
-<script src="scripts/popover.js"></script>
+<script src="scripts/jquery.rowsControl.js"></script> <script src="scripts/main.js"></script> <script src="scripts/popover.js"></script>
 <!-- endbuild -->
 <script type="text/javascript">
   alert(1231);
