--- a/app/articleNews.html
+++ b/app/articleNews.html
@@ -83,7 +83,7 @@
         <div class="col-xs-12">
             <div class="nav-box clearfix">
                 <ul>
-                    <li><a href="">所有</a></li>
+                    <li><a class="active" href="">所有</a></li>
                     <li><a href="">文献快递</a></li>
                     <li><a href="">骨科基础</a></li>
                     <li><a href="">骨医助手</a></li>
@@ -465,7 +465,7 @@
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({app,.tmp}) scripts/main.js -->
-<script src="scripts/main.js"></script>
-<!-- endbuild -->
+<script src="scripts/jquery.rowsControl.js"></script>
+<script src="scripts/main.js"></script> <!-- endbuild -->
 </body>
 </html>
