--- a/app/contactus.html
+++ b/app/contactus.html
@@ -157,8 +157,7 @@
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({app,.tmp}) scripts/main.js -->
-<script src="scripts/main.js"></script>
-<script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
+<script src="scripts/jquery.rowsControl.js"></script> <script src="scripts/main.js"></script> <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
 <script src="scripts/map.js"></script>
 <!-- endbuild -->
 </body>
