--- a/app/forgetPassword.html
+++ b/app/forgetPassword.html
@@ -42,16 +42,24 @@
     <div class="registerBox mt2em mb2em">
       <div class="row">
         <div class="col-sm-8 border-right1px">
-          <div class="col-sm-6">
-            <h3 class="colorBlue">欢迎加入古今中外</h3>
+          <div class="forgetPasswordBox">
+            <h3 class="colorBlue">找回密码</h3>
             <form action="#" method="post" class="clearfix">
               <div class="form-group">
                 <div class="col-xs-12 mt2em">
                   <div class="input-group">
-                    <span class="input-group-addon"><i class="iconfont IconRegister">&#xe616;</i></span>
-                    <input type="text" class="form-control "   name="acount"  placeholder="请输入用户名/手机号/邮箱">
+                    <span class="input-group-addon"><i class="iconfont IconRegister">&#xe61a;</i></span>
+                    <input type="text" class="form-control "   name="acount"  placeholder="请输入注册时手机号码">
                   </div>
                   <span class="help-block" style="display:none">用户名输入错误</span>
+                </div>
+                <div class="col-xs-12 mt2em clearfix">
+                  <div class="input-group authcode">
+                    <input type="text" id="authcode" name="authcode" class="form-control"placeholder="验证号"/>
+                        <span class="input-group-btn">
+                          <input class="btn btn-blue" id="btn-message" type="button" value="免费获取验证码">
+                        </span>
+                  </div>
                 </div>
                 <div class="col-xs-12 mt2em">
                   <div class="input-group">
@@ -67,50 +75,19 @@
                   </div>
                   <span class="help-block" style="display:none">两次密码不一致</span>
                 </div>
-                <div class="col-xs-12 mt2em">
-                  <div class="input-group">
-                    <span class="input-group-addon"><i class="iconfont IconRegister">&#xe615;</i></span>
-                    <input type="email" class="form-control "   name="acount"  placeholder="邮箱">
-                  </div>
-                  <span class="help-block" style="display:none">邮箱格式输入错误</span>
-                </div>
-                <div class="col-xs-12 mt2em">
-                  <div class="input-group">
-                    <span class="input-group-addon"><i class="iconfont IconRegister">&#xe61a;</i></span>
-                    <input type="text" class="form-control"   name="acount"  placeholder="手机号">
-                  </div>
-                  <span class="help-block" style="display:none">手机号格式错误</span>
-                </div>
-                <div class="col-xs-12 mt2em clearfix">
-                    <div class="input-group authcode">
-                        <input type="text" id="authcode" name="authcode" class="form-control"placeholder="验证号"/>
-                        <span class="input-group-btn">
-                          <input class="btn btn-blue" id="btn-message" type="button" value="免费获取验证码">
-                        </span>
-
-                    </div>
-
-                </div>
-                <div class="col-xs-12 mt1em">
-                  <p><input type="checkbox" checked/>我已阅读并接受<a href="#">《注册协议》</a></p>
-                </div>
                 <div class="col-xs-12  mt1em mb1em">
-                  <button type="submit" class="btn-blueWidht100" id="btn-register">注册</button>
+                  <button type="submit" class="btn-blueWidht100">确认修改</button>
                 </div>
               </div>
             </form>
+          </div>
 
-          </div>
-          <div class="col-sm-6 hidden-xs">
-            <h3>
-              <a href="javascript:void(0)" data-toggle="modal" data-target="#myModal">已有账号？马上登录</a>
-            </h3>
-          </div>
+
         </div>
 
         <div class="col-sm-4 hidden-xs text-center">
-          <h1 class="mt2em">骨今中外</h1>
-          <h2 class="mt1em">骨科新生活的引领者</h2>
+          <h3>骨今中外</h3>
+          <h4 class="mt1em">骨科新生活的引领者</h4>
           <img class="mt2em" src="images/public/二维码.png" alt=""/>
         </div>
 
@@ -142,58 +119,7 @@
   </div>
 </div>
 
-<!-- 模态框（Modal） -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-     aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog signBox">
-    <div class="modal-content ">
-      <div class="modal-header">
-        <button type="button" class="close"
-                data-dismiss="modal" aria-hidden="true">
-          &times;
-        </button>
-        <h4 class="modal-title" id="myModalLabel">
-          <img src="images/public/logo.png" alt=""/>
-        </h4>
-      </div>
-      <div class="modal-body">
-        <form action="#" method="post" class="mt1em clearfix">
-          <div class="form-group">
-            <div class="col-xs-12 mt1em mb1em">
-              <div class="input-group">
-                <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-                <input type="text" class="form-control "  id="acount" name="acount"  placeholder="请输入用户名/手机号/邮箱">
-              </div>
-              <span class="help-block" style="display:none">用户名输入错误</span>
-            </div>
-            <div class="col-xs-12  mt1em mb1em">
-              <div class="input-group">
-                <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-                <input type="password" name="pwd" class="form-control "  id="login_pwd" placeholder="请输入密码">
-              </div>
-              <span class="help-block" style="display:none">密码错误</span>
-            </div>
-            <div class="col-xs-6 link  mt1em mb1em">
-              <input type="checkbox"/>自动登录
-            </div>
-            <div class="col-xs-6 link  mt1em mb1em">
-              <p class="text-center"><span>忘记密码？</span><a href="javascript:void(0)" ><span>找回</span></a>
-              </p>
-            </div>
-            <div class="col-xs-12  mt1em mb1em">
-              <button type="submit" class="btn-blueWidht100" id="btn-login">登录</button>
-            </div>
-            <div class="col-xs-12  mt1em mb1em text-right link">
-              <p><span>还没注册?</span> <a href="javascript:void(0)" id="register">注册</a>
-              </p>
-            </div>
-          </div>
-        </form>
 
-      </div>
-    </div>
-  </div><!-- /.modal-content -->
-</div><!-- /.modal -->
 
 
 
