--- a/app/index2.html
+++ b/app/index2.html
@@ -437,8 +437,7 @@
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({app,.tmp}) scripts/main.js -->
-<script src="scripts/main.js"></script>
-<script src="../bower_components/jquery.event.swipe"></script>
+<script src="scripts/jquery.rowsControl.js"></script> <script src="scripts/main.js"></script> <script src="../bower_components/jquery.event.swipe"></script>
 <script src="../bower_components/jquery.event.move"></script>
 
 <script>
