--- a/app/onlineClass.html
+++ b/app/onlineClass.html
@@ -154,24 +154,17 @@
                         <img class="img-responsive" src="images/article/300200.png" alt="专家"/>
                     </div>
                     <div class="artCont clearfix">
-                        <div class="art-info clearfix">
-                            <span class="author">高存修</span><span class="time">2015/02/23</span>
-                        </div>
                         <h4 class="mt0">TKA 膝外翻畸形的处理技术要点</h4>
-                        <p class="colorlightBlack">本视频首先介绍了膝关节外翻畸形K 和2型外翻畸形,...</p>
                         <div class="art-commt">
-                            <div class="col-xs-4">
-                                <i class="iconfont commtIcon">&#xe603;</i>
-                                <i>200</i>
-                            </div>
+                          <div class="col-xs-4">
+                            <i class="iconfont commtIcon">&#xe616;</i>
+                            <i>老高</i>
+                          </div>
                             <div class="col-xs-4">
                                 <i class="iconfont commtIcon">&#xe605;</i>
                                 <i>200</i>
                             </div>
-                            <div class="col-xs-4">
-                                <i class="iconfont commtIcon">&#xe607;</i>
-                                <i>200</i>
-                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -695,7 +688,7 @@
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({app,.tmp}) scripts/main.js -->
-<script src="scripts/main.js"></script>
-<!-- endbuild -->
+<script src="scripts/jquery.rowsControl.js"></script>
+<script src="scripts/main.js"></script> <!-- endbuild -->
 </body>
 </html>
