--- a/app/articleDetail.html
+++ b/app/articleDetail.html
@@ -129,9 +129,9 @@
                       <div class="form-group has-feedback">
                         <textarea class="form-control" rows="3"></textarea>
                       </div>
-                      <div class="mt1em form-group">
+                      <div class="mt1em form-group clearfix">
                         <input  type="checkbox"/><span>匿名</span>
-                        <input class="floatRight btn-blue" type="submit" value="提交问题"/>
+                        <input class="floatRight btn-blue" type="submit" value="发表"/>
                       </div>
                     </form>
                     <ul class="comt-cont">
@@ -142,7 +142,8 @@
                           </div>
                           <div class="col-sm-10 col-xs-9">
                             <h4><a href="">黑夜小喵</a></h4>
-                            <p>看相 很迷信啊 我觉得只有闲的没事的人才会研 究这个 长得什么样受之父母 长得不好 就不是好 人了? 很奇怪看长相就能知道一个人的心理? 那你 就是神了 呵呵呵呵呵呵呵</p>
+                            <p class="comt-text">看相 很迷信啊 我觉得只有闲的没事的人才会研 究这个 长得什么样受之父母 长得不好 就不是好 人了? 很奇怪看长相就能知道一个人的心理? 那你 就是神了 呵呵呵呵呵呵呵</p>
+                            <p class="text-right"><span>2015/02/21</span>&nbsp;&nbsp;<a href="javascript:void(0)">引用</a></p>
                           </div>
                         </div>
                       </li>
@@ -153,7 +154,8 @@
                           </div>
                           <div class="col-sm-10 col-xs-9">
                             <h4><a href="">黑夜小喵</a></h4>
-                            <p>看相 很迷信啊 我觉得只有闲的没事的人才会研 究这个 长得什么样受之父母 长得不好 就不是好 人了? 很奇怪看长相就能知道一个人的心理? 那你 就是神了 呵呵呵呵呵呵呵</p>
+                            <p class="comt-text">看相 很迷信啊 我觉得只有闲的没事的人才会研 究这个 长得什么样受之父母 长得不好 就不是好 人了? 很奇怪看长相就能知道一个人的心理? 那你 就是神了 呵呵呵呵呵呵呵</p>
+                            <p class="text-right"><span>2015/02/21</span>&nbsp;&nbsp;<a href="javascript:void(0)">引用</a></p>
                           </div>
                         </div>
                       </li>
@@ -406,8 +408,7 @@
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({app,.tmp}) scripts/main.js -->
-<script src="scripts/main.js"></script>
-<script>
+<script src="scripts/jquery.rowsControl.js"></script> <script src="scripts/main.js"></script> <script>
     window._bd_share_config = {
         common : {
             bdText : '自定义分享内容',
