--- a/app/conferenceWholeYear.html
+++ b/app/conferenceWholeYear.html
@@ -503,7 +503,6 @@
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({app,.tmp}) scripts/main.js -->
-<script src="scripts/main.js"></script>
-<!-- endbuild -->
+<script src="scripts/jquery.rowsControl.js"></script> <script src="scripts/main.js"></script> <!-- endbuild -->
 </body>
 </html>
