--- a/app/editMedicalCase.html
+++ b/app/editMedicalCase.html
@@ -207,6 +207,7 @@
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({app,.tmp}) scripts/main.js -->
+<script src="scripts/jquery.rowsControl.js"></script>
 <script src="scripts/main.js"></script>
 <script src="scripts/popover.js"></script>
 <!-- endbuild -->
