--- a/app/idea.html
+++ b/app/idea.html
@@ -280,8 +280,7 @@
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({app,.tmp}) scripts/main.js -->
-<script src="scripts/main.js"></script>
-<script src="js/backTop.js"></script>
+<script src="scripts/jquery.rowsControl.js"></script> <script src="scripts/main.js"></script> <script src="js/backTop.js"></script>
 <!-- endbuild -->
 </body>
 </html>
