--- a/app/index.html
+++ b/app/index.html
@@ -29,9 +29,9 @@
 <body>
 <div class="header">
   <div class="head-top">
-    <div class="container">
+    <div class="container-index bgcolorWhite">
       <div class="row">
-        <div class="container">
+        <div class="container-index">
           <div class="col-xs-6">
             <p>欢迎您来讲课堂!</p>
           </div>
@@ -49,7 +49,7 @@
     </div>
   </div>
   <nav class="navbar navbar-default" role="navigation">
-    <div class="container">
+    <div class="container-index">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse"
                 data-target="#example-navbar-collapse">
@@ -82,7 +82,7 @@
   </nav>
 </div>
 <div class="content">
-  <div class="container">
+  <div class="container-index">
     <div >
       <!--middle-->
       <div>
@@ -502,15 +502,14 @@
                 </div>
                 <div class="mtc-text">
                   <h5><a href="">脊髓损伤神经学分类国际标准(2011 年修订)</a></h5>
-                  <p class="text-right time">2015/03/02</p>
                   <ul class="zx_foot">
                     <li>
                       <i class="iconfont zxIcon">&#xe60b;</i>
                       <i>高存修</i>
                     </li>
                     <li>
-                      <i class="iconfont zxIcon">&#xe605;</i>
-                      <i>200</i>
+                      <i class="iconfont zxIcon">&#xe61c;</i>
+                      <i>2015/02/12</i>
                     </li>
                   </ul>
                 </div>
@@ -523,15 +522,14 @@
                 </div>
                 <div class="mtc-text">
                   <h5><a href="">脊髓损伤神经学分类国际标准(2011 年修订)</a></h5>
-                  <p class="text-right time">2015/03/02</p>
                   <ul class="zx_foot">
                     <li>
                       <i class="iconfont zxIcon">&#xe60b;</i>
                       <i>高存修</i>
                     </li>
                     <li>
-                      <i class="iconfont zxIcon">&#xe605;</i>
-                      <i>200</i>
+                      <i class="iconfont zxIcon">&#xe61c;</i>
+                      <i>2015/02/12</i>
                     </li>
                   </ul>
                 </div>
@@ -544,15 +542,14 @@
                 </div>
                 <div class="mtc-text">
                   <h5><a href="">脊髓损伤神经学分类国际标准(2011 年修订)</a></h5>
-                  <p class="text-right time">2015/03/02</p>
                   <ul class="zx_foot">
                     <li>
                       <i class="iconfont zxIcon">&#xe60b;</i>
                       <i>高存修</i>
                     </li>
                     <li>
-                      <i class="iconfont zxIcon">&#xe605;</i>
-                      <i>200</i>
+                      <i class="iconfont zxIcon">&#xe61c;</i>
+                      <i>2015/02/12</i>
                     </li>
                   </ul>
                 </div>
@@ -565,15 +562,14 @@
                 </div>
                 <div class="mtc-text">
                   <h5><a href="">脊髓损伤神经学分类国际标准(2011 年修订)</a></h5>
-                  <p class="text-right time">2015/03/02</p>
                   <ul class="zx_foot">
                     <li>
                       <i class="iconfont zxIcon">&#xe60b;</i>
                       <i>高存修</i>
                     </li>
                     <li>
-                      <i class="iconfont zxIcon">&#xe605;</i>
-                      <i>200</i>
+                      <i class="iconfont zxIcon">&#xe61c;</i>
+                      <i>2015/02/12</i>
                     </li>
                   </ul>
                 </div>
@@ -586,15 +582,14 @@
                 </div>
                 <div class="mtc-text">
                   <h5><a href="">脊髓损伤神经学分类国际标准(2011 年修订)</a></h5>
-                  <p class="text-right time">2015/03/02</p>
                   <ul class="zx_foot">
                     <li>
                       <i class="iconfont zxIcon">&#xe60b;</i>
                       <i>高存修</i>
                     </li>
                     <li>
-                      <i class="iconfont zxIcon">&#xe605;</i>
-                      <i>200</i>
+                      <i class="iconfont zxIcon">&#xe61c;</i>
+                      <i>2015/02/12</i>
                     </li>
                   </ul>
                 </div>
@@ -607,15 +602,14 @@
                 </div>
                 <div class="mtc-text">
                   <h5><a href="">脊髓损伤神经学分类国际标准(2011 年修订)</a></h5>
-                  <p class="text-right time">2015/03/02</p>
                   <ul class="zx_foot">
                     <li>
                       <i class="iconfont zxIcon">&#xe60b;</i>
                       <i>高存修</i>
                     </li>
                     <li>
-                      <i class="iconfont zxIcon">&#xe605;</i>
-                      <i>200</i>
+                      <i class="iconfont zxIcon">&#xe61c;</i>
+                      <i>2015/02/12</i>
                     </li>
                   </ul>
                 </div>
@@ -816,8 +810,8 @@
 </div>
 <div class="footer bgcolorWhite clearfix">
   <div class="bottom-box">
+    <div class="container-index bgcolorWhite">
     <div class="bot-box1">
-      <div class="container">
         <ul class="bottomNav">
           <li><a href="">联系我们</a></li>
           <li><a href="">广告服务</a></li>
@@ -827,14 +821,65 @@
           <li><a href="">关于我们</a></li>
         </ul>
       </div>
-    </div>
     <div class="bot-box2 text-center">
-      <p class="colorlightBlack">Copyright © 2000-2015 DXY All Rights Reserved.
-      <p class="colorlightBlack">浙B2-20070219(含BBS) (浙)-经营性-2012-0008 浙卫网审[2014] 40号</p>
-      <p class="colorlightBlack">本网站用字经北京北大方正电子有限公司授权许可</p>
+        <p class="colorlightBlack">Copyright © 2000-2015 DXY All Rights Reserved.
+        <p class="colorlightBlack">浙B2-20070219(含BBS) (浙)-经营性-2012-0008 浙卫网审[2014] 40号</p>
+        <p class="colorlightBlack">本网站用字经北京北大方正电子有限公司授权许可</p>
+      </div>
     </div>
   </div>
 </div>
+<!-- 登录（Modal） -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
+     aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog signBox">
+    <div class="modal-content ">
+      <div class="modal-header">
+        <button type="button" class="close"
+                data-dismiss="modal" aria-hidden="true">
+          &times;
+        </button>
+        <h4 class="modal-title" id="myModalLabel">
+          <img src="images/public/logo.png" alt=""/>
+        </h4>
+      </div>
+      <div class="modal-body">
+        <form action="#" method="post" class="mt1em clearfix">
+          <div class="form-group">
+            <div class="col-xs-12 mt1em mb1em">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="iconfont IconRegister">&#xe616;</i></span>
+                <input type="text" class="form-control required"  id="acount" name="acount"  placeholder="请输入用户名/手机号/邮箱">
+              </div>
+              <span class="help-block" >用户名输入错误</span>
+            </div>
+            <div class="col-xs-12  mt1em mb1em">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="iconfont IconRegister">&#xe617;</i></span>
+                <input type="password" name="pwd" class="form-control required"  id="login_pwd" placeholder="请输入密码">
+              </div>
+              <span class="help-block" style="display:none">密码错误</span>
+            </div>
+            <div class="col-xs-6 link  mt1em mb1em">
+              <input type="checkbox"/>自动登录
+            </div>
+            <div class="col-xs-6 link  mt1em mb1em">
+              <p class="text-center"><span>忘记密码？</span><a href="javascript:void(0)" ><a href="#findPasswordModal" data-toggle="model" >找回</a></a>
+              </p>
+            </div>
+            <div class="col-xs-12  mt1em mb1em">
+              <button type="submit" class="btn-blueWidht100" id="btn-login"><span class="glyphicon glyphicon-off"></span> 登录</button>
+            </div>
+            <div class="col-xs-12  mt1em mb1em text-right link">
+              <p><span>还没注册?</span> <a href="javascript:void(0)" id="register">注册</a>
+              </p>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div><!-- /.modal-content -->
+</div><!-- /.modal -->
 <!-- 认证框（Modal） -->
 <div class="modal fade" id="certifyModal" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="true">
@@ -985,33 +1030,31 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal -->
 </div>
-
 <!-- build:js(.) scripts/vendor.js -->
 <!-- bower:js -->
-<script src="bower_components/modernizr/modernizr.js"></script>
-<script src="bower_components/jquery/dist/jquery.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/alert.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/button.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/carousel.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/collapse.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/dropdown.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tab.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/transition.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/scrollspy.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/modal.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
-<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
+<script src="../bower_components/modernizr/modernizr.js"></script>
+<script src="../bower_components/jquery/dist/jquery.js"></script>
+<script src="../bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js"></script>
+<script src="../bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/alert.js"></script>
+<script src="../bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/button.js"></script>
+<script src="../bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/carousel.js"></script>
+<script src="../bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/collapse.js"></script>
+<script src="../bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/dropdown.js"></script>
+<script src="../bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tab.js"></script>
+<script src="../bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/transition.js"></script>
+<script src="../bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/scrollspy.js"></script>
+<script src="../bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/modal.js"></script>
+<script src="../bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
+<script src="../bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({app,.tmp}) scripts/main.js -->
-<script src="scripts/main.js"></script>
-<script src="scripts/jquery.fitvids.js"></script>
+<script src="scripts/jquery.rowsControl.js"></script> <script src="scripts/main.js"></script> <script src="scripts/jquery.fitvids.js"></script>
 <script>
   // Basic FitVids Test
-  $(".container").fitVids();
+  $(".container-index").fitVids();
   // Custom selector and No-Double-Wrapping Prevention Test
-  $(".container").fitVids({ customSelector: "iframe[src^='http://socialcam.com']"});
+  $(".container-index").fitVids({ customSelector: "iframe[src^='http://socialcam.com']"});
 </script>
 </body>
 </html>
